# ibkr-bot

./: AWS-GUIDE.md  CLAUDE.md  Cargo.toml  README.md  SETUP-GUIDE.md
.cargo/: config.toml
src/: constants.rs  helpers.rs  main.rs  tests.rs  types.rs
