[package]
name = "ibkr-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
chrono-tz = "0.10.4"
dialoguer = "0.12.0"
eyre = "0.6.12"
ibapi = "2.1.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
